--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.10.10",
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "fabric-ca-client": "^2.2.20",
     "fabric-network": "^2.2.20",
